fixed style on mobile

--- a/src/views/react-client/src/components/shared/Layout/components/Header/components/ListMobile/ListMobile.module.scss
+++ b/src/views/react-client/src/components/shared/Layout/components/Header/components/ListMobile/ListMobile.module.scss
@@ -65,6 +65,7 @@
   display: grid;
   gap: 0.3rem;
   flex-direction: column;
+  width: 100%;
 
   &__itemSong {
     a {
